[package]
name = "hexgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
atty = "0.2.14"
hex = "0.4.3"
itertools = "0.10.3"
pretty-hex = "0.2.1"
structopt = "0.3.26"
strum = "0.24.0"
strum_macros = "0.24.0"
termcolor = "1.1.3"
twoway = "0.2.2"
